Optimize animation in UnifiedSystemTray.

This CL improves the animation performance of UnifiedSystemTray from
roughly 30fps to 60fps (tested on "link" device).

The bottleneck of the animation was TrayBubbleView::SizeToContents().
It caused all tiles in the bubble to rasterize every frame.
In order to avoid that, this CL uses layer transformation to move
position of contents rather than resizing the bubble every frame.

Test procedure:
1. Enable chrome://flags/#ash-debug-shortcuts
2. Ctrl-Shift-Alt-F to show FPS counter
3. Add TogglExpanded() at the end of
   UnifiedSystemTrayController::AnimationEnded to run animation in loop.

TEST=manual
BUG=860137

Change-Id: I26f28ce66adaa1073b0951ebf275d261770fa636
Reviewed-on: https://chromium-review.googlesource.com/1126897
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573203}
Former-commit-id: f00504b150e84b709c8bbdac59d7fb50b4ba1e17