ash/system/unified/unified_system_tray_controller.h
@@ -24,13 +24,15 @@ class DetailedViewController;
 class FeaturePodControllerBase;
 class UnifiedBrightnessSliderController;
 class UnifiedVolumeSliderController;
+class UnifiedSystemTrayBubble;
 class UnifiedSystemTrayModel;
 class UnifiedSystemTrayView;
 
 // Controller class of UnifiedSystemTrayView. Handles events of the view.
 class ASH_EXPORT UnifiedSystemTrayController : public gfx::AnimationDelegate {
  public:
-  explicit UnifiedSystemTrayController(UnifiedSystemTrayModel* model);
+  UnifiedSystemTrayController(UnifiedSystemTrayModel* model,
+                              UnifiedSystemTrayBubble* bubble = nullptr);
   ~UnifiedSystemTrayController() override;
 
   // Create the view. The created view is unowned.
@@ -148,6 +150,9 @@ class ASH_EXPORT UnifiedSystemTrayController : public gfx::AnimationDelegate {
 
   // Unowned. Owned by Views hierarchy.
   UnifiedSystemTrayView* unified_view_ = nullptr;
+
+  // Unowned.
+  UnifiedSystemTrayBubble* bubble_ = nullptr;
 
   // The controller of the current detailed view. If the main view is shown,
   // it's null. Owned.
